--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "remittance7",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build -prod --watch",
+    "start": "node server.js",
+    "build": "ng build -prod ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -56,5 +57,9 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "3.2.4"
+  },
+  "engines": {
+    "node": "10.x",
+    "npm": "6.x"
   }
 }
