--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ejs": "^2.6.1",
     "express-json": "^1.0.0",
     "express-session": "^1.15.6",
+    "log4js": "^5.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
@@ -40,7 +41,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "7.3.6",
+    "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "7.2.9",
     "@angular/language-service": "7.2.9",
     "@types/jasmine": "~2.8.3",
@@ -49,7 +50,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
