--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.9",
+    "@angular/animations": "8.2.3",
     "@angular/cdk": "^7.3.4",
-    "@angular/common": "7.2.9",
-    "@angular/compiler": "7.2.9",
-    "@angular/core": "7.2.9",
-    "@angular/forms": "7.2.9",
-    "@angular/http": "7.2.9",
+    "@angular/common": "8.2.3",
+    "@angular/compiler": "8.2.3",
+    "@angular/core": "8.2.3",
+    "@angular/forms": "8.2.3",
     "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "7.2.9",
-    "@angular/platform-browser-dynamic": "7.2.9",
-    "@angular/router": "7.2.9",
+    "@angular/platform-browser": "8.2.3",
+    "@angular/platform-browser-dynamic": "8.2.3",
+    "@angular/router": "8.2.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
@@ -37,17 +36,17 @@
     "pm2": "^3.5.1",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "7.2.9",
-    "@angular/language-service": "7.2.9",
+    "@angular-devkit/build-angular": "~0.803.1",
+    "@angular/cli": "^8.3.1",
+    "@angular/compiler-cli": "8.2.3",
+    "@angular/language-service": "8.2.3",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
@@ -58,7 +57,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "3.2.4"
+    "typescript": "3.5.3"
   },
   "engines": {
     "node": "10.x",
